<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="hello">Hello World, SuiviMedicalActivity!</string>
    <string name="app_name">SuiviMedical</string>
    <string name="viewUserName">Nom d\'usager</string>
    <string name="viewPassword">Mot de passe</string>
    <string name="bDossierP">Dossier Médical</string>
    <string name="bReportP">Envoyer information</string>
    <string name="bDrugsP">Médicaments</string>
    <string name="bSkypeP">Téléphoner à votre médecin</string>
    <string name="bAlertP">Urgence</string>
    <string name="Description">Description</string>
    <string name="hintReport">Écrivez votre rapport ici</string>
    <string name="viewQuantity">"Quantité : "</string>
    <string name="viewFrequency">"Fréquence : "</string>
    <string name="viewDaysLeft">Jours restants</string>
    <string name="add">+</string>
    <string name="addPatient">Ajouter un patient</string>
    <string name="textEvent">Événements actifs</string>
    <string name="textEventOver">Événements fermés</string>
    <string name="visualize">Visualiser</string>
    <string name="addReportDoc">Ajouter un rapport</string>
    <string name="prescribe">Prescrire</string>
    <string name="action">Demander une action</string>
    <string name="diagnosis">Diagnostic(s)</string>
    <string name="closeEvent">Fermer l\'événement</string>
    <string name="status">Status</string>
    <string name="diagnose">Diagnostic</string>
    <string name="hintDiagnosis">Écrivez votre diagnostique complet ici</string>
    <string name="blood">Prise de sang</string>
    <string name="urinalysis">Analyse d\'urine</string>
    <string name="xray">Rayons X</string>
    <string name="biopsy">Biopsie</string>
    <string name="glucose">Glycémie</string>
    <string name="psy">Évaluation psychologique</string>
    <string name="connect">Connection</string>
    <string name="openDate">Date d\'ouverture :</string>
    <string name="closedDate">Date de fermeture :</string>
   
	<string-array name="signesVitaux_array">
        <item>Temperature</item>
        <item>Taux de glucose</item>
        <item>Pression diastolique</item>
        <item>Pression systolique</item>
        <item>Frequence respiratoire</item>
        <item>Frequence cardiaque</item>
        <item>IMC</item>
        <item>Saturation O2</item>

    </string-array>      
    
	<string-array name="info_array">
	    <item>Temperature</item>
        <item>Taux de glucose</item>
        <item>Pression diastolique</item>
        <item>Pression systolique</item>
        <item>Frequence respiratoire</item>
        <item>Frequence cardiaque</item>
        <item>IMC</item>
        <item>Saturation O2</item>
        <item>Photographie</item>
	</string-array>
    
	<string-array name="unit_array">
	    <item>°C.</item>
	   <item>g/L.</item>
	   <item>mm de mercure.</item>
	    <item>mm de mercure.</item>
	   <item>cycles par minutes.</item>
	   <item>pulsations par minutes.</item>
	   <item></item>
	   <item>%.</item>
	   <item></item>
	</string-array>
	
    <string name="title_valeurs">Signes vitaux</string> 
    <string name="text_semaine">derniere semaine</string>
	<string name="text_annee">derniere annee</string>
	<string name="info">Informations</string>
	<string name="ok">Ok</string>
	<string name="cancel">Annuler</string>
	<string name="prescription">Prescription</string>
	<string name="report">Rapport</string>
	<string name="all">Tout</string>
	<string name="questionHumeur">Comment allez-vous aujourd\'hui? (Optionnel)</string>
	<string name="endouleur">En douleur</string>
	<string name="mal">Mal</string>
	<string name="mieux">Mieux</string>
	<string name="bien">Bien</string>
	<string name="envoyer">Envoyer</string>
	<string name="confirmer">Confirmer la prise du médicament</string>
	<string name="commander">Commander à la pharmacie</string>
	<string name="prescrireMed">Prescrire un médicament</string>
	<string name="listMeds">Liste des médicaments prescrits :</string>
	<string name="drugname_text">Médicament :</string>
	<string name="quantite_text">Quantité :       </string>
	<string name="frequence_text">Fréquence :     </string>
	<string name="nombrejours_text">Nombre de jours :</string>
	<string name="titlediagnostic">Nouveau Diagnostic :</string>
	
	<string-array name="diagnosis_array">
				<item>Depression</item>
				<item>Angoisses chroniques</item>
				<item>Fracture</item>
				<item>Alzeimer</item>
				<item>Arthrite</item>
				<item>Arthrose</item>
				<item>Troubles bipolaires</item>
				<item>Rhume</item>
				<item>Grippe</item>
				<item>Bronchite</item>
				<item>Pneumonie</item>
				<item>Appendicite</item>
				<item>Pharyngite</item>
				<item>Laryngite</item>
				<item>Bronchite</item>
				<item>Eczema</item>
				<item>Psoriasis</item>
				<item>Diabete de type I</item>
				<item>Diabete de type II</item>
				<item>Dechirure des ligaments</item>
				<item>Luxation</item>
				<item>Schizophrenie</item>
				<item>Epilespsie</item>
				<item>Encephalite</item>
				<item>Ulcere</item>
				<item>Cancer</item>
				<item>Sida</item>
				<item>Traumatisme cranien</item>
				<item>Aphasie</item>
				<item>Foulure</item>
				<item>Entorse</item>
				<item>Phlebite</item>
				<item>Angine</item>
				<item>Maladie de Crohn</item>
				<item>Intoxication alimentaire</item>
				<item>Gastro-enterite</item>
			</string-array>
</resources>