<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

     <TextView
            android:id="@+id/titleDiagnosis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titlediagnostic"
            android:textAppearance="?android:attr/textAppearanceLarge" android:textSize="30dp" android:layout_marginTop="5dp"/>
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textDiagnosis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diagnose"
            android:textAppearance="?android:attr/textAppearanceLarge" android:textSize="17dp" android:layout_marginRight="5dp" android:layout_marginTop="5dp"/>

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <TextView
        android:id="@+id/titleDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Description"
        android:textAppearance="?android:attr/textAppearanceMedium" android:layout_marginTop="20dp" android:textSize="17dp"/>

    <EditText
        android:id="@+id/textDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine" android:hint="@string/hintDiagnosis">

        <requestFocus />
    </EditText>
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp" >

        <Button
            android:id="@+id/bOkDiagn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/envoyer" />

        <Button
            android:id="@+id/bCancelDiagn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>