<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView  android:id="@+id/titleDesc2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge" android:textSize="30dp" android:layout_marginBottom="10dp"
        android:text="@string/prescribe"/>

    <LinearLayout android:layout_width="match_parent"
        		android:layout_height="wrap_content">
    <TextView
        android:id="@+id/drugname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drugname_text"
        android:textAppearance="?android:attr/textAppearanceSmall" android:textSize="20dp" android:layout_marginBottom="10dp"/>
	
        
	    <EditText
	        android:id="@+id/editdrugname"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content">
	
	        <requestFocus />
	    </EditText>
    </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
        		android:layout_height="wrap_content">
    <TextView
        android:id="@+id/qtetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantite_text"
        android:textAppearance="?android:attr/textAppearanceSmall" android:textSize="20dp" android:layout_marginBottom="10dp"/>
	
        
	    <EditText
	        android:id="@+id/editqte"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content">
	
	    </EditText>
    </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
        		android:layout_height="wrap_content">
    <TextView
        android:id="@+id/freqtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frequence_text"
        android:textAppearance="?android:attr/textAppearanceSmall" android:textSize="20dp" android:layout_marginBottom="10dp"/>
	
        
	    <EditText
	        android:id="@+id/editfreq"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content">
	
	        <requestFocus />
	    </EditText>
    </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
        		android:layout_height="wrap_content">
    <TextView
        android:id="@+id/nombrejourstext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombrejours_text"
        android:textAppearance="?android:attr/textAppearanceSmall" android:textSize="20dp" android:layout_marginBottom="10dp"/>
	
        
	    <EditText
	        android:id="@+id/editnombrejours"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content">
	
	        <requestFocus />
	    </EditText>
    </LinearLayout>
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp" >

        <Button
            android:id="@+id/bsendPresc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/envoyer" />

        <Button
            android:id="@+id/bCancelPresc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>