<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/info1Patient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" android:layout_weight="1"/>

        <Button
            android:id="@+id/addEvent"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/addPatient"
            android:text="@string/add"
            android:textSize="30dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/info2Patient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView" android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/info3Patient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView" android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/textOpenEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textEvent"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/listEventOpen"
        android:layout_width="match_parent"
        android:layout_height="170dp" >

    </ListView>

    <TextView
        android:id="@+id/textEventClosed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textEventOver"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <ListView
        android:id="@+id/listEventClosed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>